--- a/index.html
+++ b/index.html
@@ -5,14 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Funtional Bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
     <header>
-        <h1>Funtional <span>Bap-Er-Bank</span>!!!!!!</h1>
+        <h1 class="text-5xl text-center mt-4">Funtional <span class="text-red-500 font-medium">Bap-Er-Bank</span>!!!!!!
+        </h1>
     </header>
+    <main>
+        <section class="mt-8">
+            <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto text-white ">
+                <div class="bg-yellow-400 p-8  rounded-lg">
+                    <h4 class="text-3xl">Deposit</h4>
+                    <h2 class="text-5xl font-medium">$<span id="deposit-total">00</span></h2>
+                </div>
+                <div class="bg-blue-400 p-8 text-center rounded-lg">
+                    <h4 class="text-3xl">Withdrawl</h4>
+                    <h2 class="text-5xl font-medium">$<span id="withdraw-total">00</span></h2>
+                </div>
+                <div class="bg-red-400 p-8 text-center rounded-lg">
+                    <h4 class="text-3xl">Balance</h4>
+                    <h2 class="text-5xl font-medium">$<span id="balance-total">00</span></h2>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="mt-8 w-3/4 mx-auto">
+            <div class="grid grid-cols-2 gap-4">
+                <div class="bg-green-400 p-8 rounded-lg">
+                    <h3 class="text-4xl mb-4  text-white">
+                        Your Deposit
+                    </h3>
+                    <input id="deposit-filed" class="w-3/4 px-4 py-3 rounded-lg block mb-4" type="text"
+                        placeholder="$ Amount you want deposit ">
+                    <button id="btn-deposit"
+                        class=" bg-blue-800 px-6 py-2 text-white rounded-lg text-2xl hover:bg-sky-400">Deposit</button>
+                </div>
+                <div class="bg-violet-400 p-8 rounded-lg">
+                    <h3 class="text-4xl mb-4  text-white">
+                        Your Withdraw
+                    </h3>
+                    <input class="w-3/4 px-4 py-3 rounded-lg block mb-4" type="text"
+                        placeholder="$ Amount you want Withdraw ">
+                    <button id="btn-withdraw"
+                        class=" bg-blue-800 px-6 py-2 text-white rounded-lg text-2xl hover:bg-sky-600">withdraw</button>
+                </div>
+        </section>
+    </main>
+
+    <script src="js/deposit.js"></script>
 </body>
 
 </html>
